--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   },
   "dependencies": {},
   "description": "云之家轻应用库的es6版本",
-  "devDependencies": {},
+  "devDependencies": {
+    "ts-loader": "^2.0.3",
+    "typescript": "^2.3.2",
+    "webpack": "^2.2.1"
+  },
   "directories": {},
   "repository": {
     "type": "git",
@@ -22,8 +26,9 @@
   "optionalDependencies": {},
   "readme": "ERROR: No README data found!",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "typings": "index",
-  "version": "1.0.10"
+  "version": "1.0.12"
 }
