--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,8 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
-    "sourceMap": true,
     "noImplicitAny": true,
-    "module": "commonjs",
-    "target": "es2017",
+    // "module": "commonjs",
+    "target": "es6",
     "allowJs": true
   }
 }
