--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
     "noImplicitAny": true,
-    // "module": "commonjs",
-    "target": "es6",
+    "target": "esnext",
     "allowJs": true
   }
 }
